--- a/PD report_rough.Rmd
+++ b/PD report_rough.Rmd
@@ -20,7 +20,7 @@ levels(park$Gender) <- c("Male", "Female")
 park <- park[complete.cases(park$SixMn_Wk4) == TRUE,]
 park <- park[complete.cases(park$FiveM_Wk4) == TRUE,]
 
-park$sixdif <- park$SixMn_Wk4-park$SixMn_Wk0 # negative if improvement
+park$sixdif <- park$SixMn_Wk4-park$SixMn_Wk0 # positive if improvement
 park$secdif <- park$FiveM_Tm4-park$FiveM_Tm0 # negative if improvement
 
 ```
@@ -41,11 +41,12 @@ print(tab2)
 ```
 
 ## Question and Hypothesis
-Published findings showed that the greatest improvement in mobility was seen at the four month milestone. Following this vein, the question addressed here asks whether or not a person's Hoehn and Yahr stage of Parkinson's Disease at week zero was a predictor of the level of improvement seen at month four. It may be that those with more advanced Parkinson's did not confer as great a benefit from the interventions as those with earlier stages. Stage was scaled from 1 (lowest) to 4 (highest), moving up in increments of .5. Our findings could serve the physician community by providing anticipated benefits for patients at various stages of PD. If a patient is more advanced, perhaps a more involved intervention would be prescribed. Conversely, those with very early stage PD may be encouraged to pick-up an exercise regimen, but may need less supervision and monitoring.
+Published findings showed that the greatest improvement in mobility was seen at the four month milestone. Following this vein, the question addressed here asks whether or not a person's Hoehn and Yahr Stage of Parkinson's Disease at week zero was a predictor of the level of improvement seen at month four. It may be that those with more advanced Parkinson's did not confer as great a benefit from intervention as those with earlier stages. Stage was scaled from 1 (lowest) to 4 (highest), moving up in increments of .5. Our findings could serve the physician community by providing anticipated benefits for patients at various stages of PD. If a patient is more advanced, perhaps a more involved intervention would be prescribed. Conversely, those with very early stage PD may be encouraged to pick-up an exercise regimen, but could require less supervision and monitoring.
 
 ## Methods
-We first generated two outcome variables. 1) The difference in time taken to walk 2 meters between week 4 and 0, a negative value indicated a decrease in time. 2) The difference in distance walked in 6 minutes between week 4 and week 0, again with negative values indicating improvement. Participants worsened by an average of `r round(mean(park$sixdif), 2)` meters in their 6 minute walk with standard deviation `r round(sd(park$sixdif), 2)`. This incredible variability suggests that some patients benefitted much greater than others. Participants improved by an average of `r round(mean(park$secdif), 2)` seconds in their 2 meter walk time with standard deviation `r round(sd(park$secdif), 2)`. Again this indicates that patients had varying degrees of response to the intervention.\n
-To broadly assess model capabilities, we conducted a bootstrap assessment of R-squared values for the crude and adjusted models. The crude models contained the precision variables of Gender, Group, and Levidopa dosage at month four. These predicted either six minute walk distance or 2 meter walk time. The adjusted model includes Stage of Parkinson's Disease at the start of the study. Following generation of R-squared values, multivariate linear models were compared against each other using a partial-F test.
+We first generated two outcome variables. 1) The difference in time taken to walk 2 meters between month 4 and week 0, a negative value indicated a decrease in time. 2) The difference in distance walked in 6 minutes between month 4 and month 0, with positive values indicating improvement. Participants worsened by an average of `r round(mean(park$sixdif), 2)` meters in their 6 minute walk with standard deviation `r round(sd(park$sixdif), 2)`. This incredible variability suggests that some patients benefitted much greater than others. Participants improved by an average of `r round(mean(park$secdif), 2)` seconds in their 2 meter walk time with standard deviation `r round(sd(park$secdif), 2)`. Again this indicates that patients had varying degrees of response to the intervention.\n
+To understand if differences in Stage of Parkinson's Disease at the start of treatment impacted a patient's level of improvement by month 4, we ran two models: 1) An unadjusted (crude) model that contained the precision variables accounted for in study design (Gender, Group, and Levidopa dosage at month four), and 2) an adjusted model that added in stage at study outset.These predicted either six minute walk distance or 2 meter walk time.\n
+To assess model capabilities, we conducted a stratified bootstrap assessment of R-squared values for the crude and adjusted models, ensuring that equal proportions of patients from the three treatment groups were present in each sample. Following generation of R-squared values, multivariate linear models were compared against each other using a partial-F test.
 
 ## Results:
 Quick assessment of outcome variables indicated that enormous variability existed in benefit seen by participants. One patient saw improvement of `r round(max(park$sixdif))` meters for their six minute walk difference. Another had worsening of `r round(min(park$sixdif))` on their walking distance. 
@@ -54,7 +55,7 @@ Quick assessment of outcome variables indicated that enormous variability existe
 ```{r, echo=F}
 # bootstrap function that reports bootstrapped r squared values
 source("C:/Users/rache/Documents/Methods 6611/Final Project/Stratified Sampling Code.R", local = TRUE)
-set.seed(496)
+set.seed(222)
 boot_r2 <- function(formula, dat){
   fun_lm <- function(formula, dat){
     summary(lm(formula, data=stratified(park, 2, nrow(park)/3, select = NULL, replace = TRUE)))$r.squared
@@ -67,6 +68,8 @@ six_r2 <- as.data.frame(boot_r2(sixdif ~ HYstage0 + Group + Gender + LEDD4, park
 colnames(six_r2) <- c("rsq")
 six_crude <- as.data.frame(boot_r2(sixdif ~ Group + Gender + LEDD4, park))
 colnames(six_crude) <- c("rsq")
+
+t.test(six_r2$rsq, six_crude$rsq)
 
 # assign model name and bind into a dataframe
 six_r2$model <- 'Adjusted'
@@ -130,17 +133,16 @@ pander(coef_table)
 ```
 
 ### Model Significance
-To understand if differences in Stage of Parkinson's Disease at the start of treatment impacted a patient's level of improvement by month 4, we ran two models: 1) An unadjusted model that contained the precision variables accounted for in study design, and 2) an adjusted model that added in stage at study outset. The unadjusted model contained Gender, Group, and Levidopa dosage at month 4. Change in slope estimates for predicting six minute walking distance are shown in rows 1 and 2 of Table 3. Estimates for two meter walk time are shown in rows 3 and 4. 
 #### Six Minute Walk Distance
-The crude model for predicting change in distance had a p value of .469 and had no individual variables with significance. In the Adjusted model, for every 1 unit increase in Stage of Parkinson's Disease, we estimate that the distance walked by a participant will decrease by 7.77 meters. However, Stage was not statistically significant (p=.758), and it's contribution to the model had no clinical significance. When adjusting for Stage, women are estimated to improve by 8 meters less than men. This difference is not statistically significant (p: .409). As in the crude model, no individual variable was statistically significant.
+The crude model for predicting change in distance had a p value of .469 and had no individual variables with significance. In the Adjusted model, for every 1 unit increase in Stage of Parkinson's Disease, we estimate that the distance walked by a participant will decrease by 7.77 meters (Table 2). However, Stage was not statistically significant (p=.758). When adjusting for Stage, women are estimated to worsen by 8 meters more than men. This difference is not statistically significant (p: .409). As in the crude model, no individual variable was statistically significant.
 #### Two Meter Walk Time
-The crude model for predicting change in time had a p value of .092. Female was a significant predictor of improvement with a p value of .012. Female participants were estimated to improve by .2 seconds more than male participants. In the adjusted model, for every one unit increase in Stage of Parkinson's Disease, we estimate that the time taken to walk 2 meters will decrease by approximately .0008 seconds. With a p value of .994, Stage did not predict change in time at a statistically significant level. However, Females remained statistically significant in the adjusted model and were still estimated to improve by .2 seconds more than males (Table 2).
+The crude model for predicting change in time had a p value of .092. Female was a significant predictor of improvement with a p value of .012. Female participants were estimated to improve by .2 seconds more than male participants (Table 2). In the adjusted model, for every one unit increase in Stage of Parkinson's Disease, we estimate that the time taken to walk 2 meters will decrease by .0008 seconds. With a p value of .994, Stage did not predict change in time at a statistically significant level. However, Females remained statistically significant in the adjusted model and were still estimated to improve by .2 seconds more than males (Table 2). However, since the overall model was not significant, this estimate is not of clinical importance.
 
-Partial F-tests of the two models confirmed that there was no significant difference in estimation ability for both six minute walking distance (p=.758) and for two meter walking time (p=.847).
+Partial F-tests of the two models confirmed that there was no significant difference in estimation ability for both adjusted six minute walking distance (p=.758) and for adjusted two meter walking time (p=.847) compared to their respective crude models.
 
 
 ## Discussion and Conclusions
-After generation of the crude and adjusted model, it was found that a participant's stage of Parkinson's Disease at the start of the study did not have a clinically significant impact on the level of improvement they saw after four months, regardless of which treatment group they were in. After control for Gender differences and Levidopa dose differences, it appears that treatment group was the best predictor of of the level of improvement in both six minute walk distance and two meter walk time. Large amounts of R-squared overlap shown in Figure 1 indicated that the amount of variability predicted by the adjusted model differed in no clinically meaningful way from the unadjusted model. Though, due to enormous sample sizes from the bootstrap (1000 iterations), the differences were statistically significant.
+After generation of the crude and adjusted models, it was found that a participant's stage of Parkinson's Disease at the start of the study did not have a clinically significant impact on the level of improvement they saw after four months, regardless of which treatment group they were in. After control for Gender differences and Levidopa dose differences, it appears that treatment group was the best predictor of of the level of improvement in both six minute walk distance and two meter walk time. Large amounts of R-squared overlap shown in Figure 1 indicated that the amount of variability predicted by the adjusted model differed in no clinically meaningful way from the unadjusted model, though the differences were statistically significant.
 There is a limitation of this study that must be addressed. Table 1 shows that the majority of patients (85.1%) had stage 2 or 2.5 of Parkinson's Disease, with only 2 patients of the population retained at week four having a physician measured stage of 1. Due to the limited variability in stage, it is possible that true changes in response due to differing disease severity were not detected.
 Despite this, it may be encouraging that stage of Parkinson's Disease had no meaningful impact on level of improvement seen in study participants. This could imply that all patients, regardless of how much their disease has progressed, can benefit from exercise treatment to delay loss of physical independence. Further study to understand how exercise impacts a wide variety of stages of Parkinson's Disease would shed more light on this matter.
 
